src/styles/components/_header.scss
#header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: 100px;
  // border-bottom: 5px solid $accent-teal;
  overflow: visible;
  position: fixed;
  top: 0px;
  left: 0px;
  // background dots
  background-color: $secondary-bg-color;
  background-image: radial-gradient($vintage 10%, transparent 10%),
  radial-gradient($vintage 10%, transparent 10%);
  background-size: 20px 20px;
  background-position: 0 0, 10px 10px;


}

.branding {
  background: url('./src/styles/images/BLAMM_Logo.png') center/contain;
  width: 13rem;
  height: 13rem;
  position: relative;
  top: 2.5rem;
  left: 0.5rem;
}

#mainMenu {
}

.menuLink {
  display: flex;
  justify-content: center;
}

.nav {
  margin: 2vh;
  transform: rotate(-5deg);
}

.nav a {
  text-decoration: none;
  letter-spacing: 0.1rem;
  color: $accent-orange;
  text-shadow:
    3px 3px 0 $body-font-color,
  -1px -1px 0 $body-font-color,
   1px -1px 0 $body-font-color,
   -1px 1px 0 $body-font-color,
    1px 1px 0 $body-font-color,;
  font-size: 3em;

}

.userNav {
  display: flex;
  flex-direction: row-reverse;
  width: 2rem;
  padding-right: 4rem;
  text-decoration: none;

  font-size: 2rem;
  text-decoration: none;
  color: $vintage;
  text-shadow:
  3px 3px 0 $body-font-color,
-1px -1px 0 $body-font-color,
 1px -1px 0 $body-font-color,
 -1px 1px 0 $body-font-color,
  1px 1px 0 $body-font-color,;
}

.userNav a {

}

.cartNumber {
  color: $accent-orange;
  font-size: 1.5rem;
  z-index: 2;
  position: absolute;
  right: 5.25rem;
  top: 2rem;
}

